--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
+  multiselect: ^0.1.0
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
