--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,15 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/launcherIcons/ic_launcher.png"
+  adaptive_icon_background: "assets/launcherIcons/ic_launcher_background.png"
+  adaptive_icon_foreground: "assets/launcherIcons/ic_launcher_foreground.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
