--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,7 +53,21 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs{
+        debug{
+            keyAlias 'upload'
+            keyPassword 'android'
+            storeFile file('lettutor-keystore.jks')
+            storePassword 'android'
+        }
+    }
+
     buildTypes {
+        debug {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
+        }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
