--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   advance_pdf_viewer: ^2.0.1
+  image_picker: ^0.8.7+5
+  country_picker: ^2.0.20
 
 dev_dependencies:
   flutter_test:
