--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
       ref: 4e5d96be29de515f1081c0b6897741b8dca84722
   image_picker: ^0.8.7+5
   country_picker: ^2.0.20
+  firebase_crashlytics: ^3.3.1
 
 dev_dependencies:
   flutter_test:
