--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,13 @@ android {
             storeFile file('lettutor-keystore.jks')
             storePassword 'android'
         }
+
+        release{
+            keyAlias 'upload'
+            keyPassword 'android'
+            storeFile file('lettutor-keystore.jks')
+            storePassword 'android'
+        }
     }
 
     buildTypes {
@@ -74,7 +81,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
