--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   image_picker: ^0.8.7+5
   country_picker: ^2.0.20
   firebase_crashlytics: ^3.3.1
+  firebase_analytics: ^10.4.1
 
 dev_dependencies:
   flutter_test:
