--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+ xmlns:tools="http://schemas.android.com/tools"
     package="vn.zabittank.let_tutor_mobile">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -17,6 +18,7 @@
 
 
    <application
+        tools:replace="android:label"
         android:label="Lettutor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
