--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   country_picker: ^2.0.20
   firebase_crashlytics: ^3.3.1
   firebase_analytics: ^10.4.1
+  jitsi_meet_wrapper: ^0.0.6
 
 dev_dependencies:
   flutter_test:
