--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   firebase_crashlytics: ^3.3.1
   firebase_analytics: ^10.4.1
   jitsi_meet_wrapper: ^0.0.6
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
